--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,11 @@ body {
   line-height: 1;
 }
 
+.btn-color {
+  background-color: #7950f2;
+  color: #fff;
+}
+
 h3 {
   margin: 0;
   text-transform: uppercase;
